# healins-fn

./: .gitignore  CONTEXT.md  README.md  docker-compose.yml  package.json
ai-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
ai-service/app/: main.py  schemas.py  services.py
backend/: .env.example  README.md  package-lock.json  package.json  test-prisma.ts  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json  tsconfig.tsbuildinfo  ws3-prototype.ts  ws4-prototype.ts  ws5-prototype.ts
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts
backend/src/ai/: ai.controller.ts  ai.gateway.ts  ai.module.ts  ai.processor.ts  ai.service.ts
backend/src/audit/: audit.controller.ts  audit.module.ts  audit.service.spec.ts  audit.service.ts  clinical-events.service.spec.ts  clinical-events.service.ts
backend/src/clinicians/: clinicians.module.ts
backend/src/common/: healins-types.ts
backend/src/consents/: consents.controller.ts  consents.module.ts  consents.service.spec.ts  consents.service.ts
backend/src/encounters/: encounter-events.service.ts  encounter-subscriber.service.ts  encounters.controller.ts  encounters.module.ts  encounters.service.spec.ts  (+1 more)
docs/adr/: 0001-fhir-domain-mapping.md
frontend/: DESIGN.md  package-lock.json  package.json
guide/: HEALINS_CODE_REVIEW_COMPLETE.md  Healins Product Requirements.md  Here s the full structure.txt  healins_audit_review_markdown.md  healins_backend_frontend_review.md  trstcle.txt
memory/: Memory.md  Notes.md  Progress.md
scripts/: dev.sh
(+79 files in other folders)
