[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "healins-ai-service"
version = "0.1.0"
description = "Healins AI service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136,<1.0",
  "uvicorn[standard]>=0.46,<1.0",
  "pydantic>=2.13,<3.0",
  "python-dotenv>=1.2,<2.0",
]

[tool.uv]
dev-dependencies = []
